# sunport-agent-business

./: .gitignore  DEV.md  Makefile  README.md  pyproject.toml
agent/: agent.py  cli.py
agent/prompts/: style.txt  system.txt
docs/: 4_WEEK_DEPTH_PLAN.md  BUILD_SPECIFICATION.md  CONTRACTOR_TASK_BRIEF.md  MILESTONE_STRUCTURE.md  PROJECT_SCOPE.md
scripts/: new_fixture.py
tests/: mock_context.json  test_basic_flow.py  test_structure.py
